--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">StockApp</string>
+    <string name="main_list_header1">한글명</string>
+    <string name="main_list_header2">현재가</string>
+    <string name="main_list_header3">전일대비</string>
+    <string name="main_list_header4">거래대금</string>
 </resources>
