1. 상세화면 진입시 해당 마켓코드로 웹소켓 통신(실시간 호가)하도록 로직 적용 2. 상세화면 UI 프레임 구성 - 메인화면 처럼 Scaffold 기준으로 세웠으며, 컨텐츠 영역에 Tab,LazyColumn,Input Component(Slot Composable)을 구성함

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -4,4 +4,9 @@
     <string name="main_list_header2">현재가</string>
     <string name="main_list_header3">전일대비</string>
     <string name="main_list_header4">거래대금</string>
+    <string name="detail_tab_order">주문</string>
+    <string name="detail_tab_hoga_order">호가주문</string>
+    <string name="detail_tab_chart">차트</string>
+    <string name="detail_tab_sise">시세</string>
+    <string name="detail_tab_info">정보</string>
 </resources>
