1. 상세화면 주문 매수 탭 Compose UI 개발 중

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -9,4 +9,30 @@
     <string name="detail_tab_chart">차트</string>
     <string name="detail_tab_sise">시세</string>
     <string name="detail_tab_info">정보</string>
+    <string name="detail_buy_tab">매수</string>
+    <string name="detail_sell_tab">매도</string>
+    <string name="detail_transaction_tab">거래내역</string>
+    <string name="detail_buy_tab_appointed">지정</string>
+    <string name="detail_buy_tab_market">시장</string>
+    <string name="detail_buy_tab_reservation">예약</string>
+    <string name="detail_order_possible">주문가능</string>
+    <string name="detail_order_amount">수량</string>
+    <string name="detail_possible">가능</string>
+    <string name="detail_order_amount_dropdown_maximum">최대</string>
+    <string name="detail_order_amount_dropdown_50percent">50%</string>
+    <string name="detail_order_amount_dropdown_25percent">25%</string>
+    <string name="detail_order_amount_dropdown_10percent">10%</string>
+    <string name="detail_order_price">가격</string>
+    <string name="detail_compared_to_the_current_price">현재가 대비 %</string>
+    <string name="detail_compared_to_the_current_price_dropdown_15percent">15%</string>
+    <string name="detail_compared_to_the_current_price_dropdown_10percent">10%</string>
+    <string name="detail_compared_to_the_current_price_dropdown_5percent">5%</string>
+    <string name="detail_compared_to_the_current_price_dropdown_0percent">0%</string>
+    <string name="detail_compared_to_the_current_price_dropdown_minus_5percent">-5%</string>
+    <string name="detail_compared_to_the_current_price_dropdown_minus_10percent">-10%</string>
+    <string name="detail_compared_to_the_current_price_dropdown_minus_15percent">-15%</string>
+    <string name="detail_total_order_price">총액</string>
+    <string name="detail_reset">초기화</string>
+    <string name="detail_buy">매수</string>
+    <string name="title_activity_test">TestActivity</string>
 </resources>
