1. ModalBottomSheet을 사용하려 했으나, 하단 소프트키와 겹치는 현상이 있고, ModalBottomSheet 자체 버그(아직 실험단계의 컴포넌트이니까..)인 듯 하여 AnimatedVisibility를 활용하여 BottomSheet를 비슷하게 만들어 봤음..

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -34,5 +34,19 @@
     <string name="detail_total_order_price">총액</string>
     <string name="detail_reset">초기화</string>
     <string name="detail_buy">매수</string>
+    <string name="order_bottom_sheet_title1">주문수량/총액 입력</string>
+    <string name="order_bottom_sheet_title2">가격 입력</string>
+    <string name="order_bottom_sheet_title1_tab1">주문수량</string>
+    <string name="order_bottom_sheet_title1_tab2">주문총액</string>
+    <string name="order_bottom_sheet_order_price">주문가격</string>
+    <string name="order_bottom_sheet_order_amount">주문수량</string>
+    <string name="order_bottom_sheet_order_total_price">주문총액</string>
+    <string name="order_bottom_sheet_button_plus_ten_million">+1000만</string>
+    <string name="order_bottom_sheet_button_plus_one_million">+100만</string>
+    <string name="order_bottom_sheet_button_plus_one_hundred_thousand">+10만</string>
+    <string name="order_bottom_sheet_button_plus_ten_thousand">+1만</string>
+    <string name="order_bottom_sheet_button_maximum">최대</string>
+    <string name="order_bottom_sheet_button_reset">초기화</string>
+    <string name="order_bottom_sheet_button_confirm">획인</string>
     <string name="title_activity_test">TestActivity</string>
 </resources>
