--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="main_list_header3">전일대비</string>
     <string name="main_list_header4">거래대금</string>
     <string name="detail_tab_order">주문</string>
-    <string name="detail_tab_hoga_order">호가주문</string>
+    <string name="detail_tab_hoga">호가</string>
     <string name="detail_tab_chart">차트</string>
     <string name="detail_tab_sise">시세</string>
     <string name="detail_tab_info">정보</string>
