--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -53,5 +53,9 @@
     <string name="low_price">저가</string>
     <string name="close_price">종가</string>
     <string name="trade_amount">거래량</string>
+    <string name="minute">분</string>
+    <string name="days">일</string>
+    <string name="week">주</string>
+    <string name="month">월</string>
     <string name="title_activity_test">TestActivity</string>
 </resources>
